<resources>
    <string name="app_name">聊天客户端</string>
    <!--登录界面-->
    <string name="login">登录</string>
    <string name="retrieve_password">找回密码</string>
    <string name="new_user">新用户</string>
    <string name="login_hint1">账号</string>
    <string name="login_hint2">密码</string>
    <!--登录检查相关-->
    <string name="login_check">用户名或密码错误</string>
    <!--注册页面-->
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="comfirm_password">确认密码</string>
    <string name="input_phonenum">请输入手机号</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="reg">注册</string>
    <string name="back">返回</string>
    <!--注册检查相关-->
    <string name="account_check">账号不能低于8个字符</string>
    <string name="password_check1">密码必须包含字母和数字</string>
    <string name="password_check2">密码不能低于8个字符</string>
    <string name="password_confirm_check">密码不一致，请重新输入</string>
    <string name="phonenum_check1">手机号码必须为11位数字</string>
    <string name="phonenum_check2">请输入合法的手机号码</string>
    <string name="code_check">验证码错误</string>
    <!--用户端主页-->
    <string name="cse">客服</string>
    <string name="ic">智能咨询</string>
    <!--聊天界面-->
    <string name="send">发送</string>
    <!--个人资料（用户）-->
    <string name="me">我的</string>
    <string name="my_profile">我的资料</string>
    <string name="modify_profile">修改资料</string>
    <string name="id">id:</string>
    <string name="wipe_cache">清除缓存</string>
    <string name="exit">退出</string>
    <!--修改个人资料-->
</resources>
