<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_me_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:background="@color/title_bg">


        <ImageView
            android:id="@+id/iv_toMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_back"/>


        <TextView
            android:id="@+id/tv_me_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/me"
            android:textColor="#ffffff"
            android:textSize="20sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/rl_me_title"
        android:id="@+id/ll_me_portraitzone"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:background="@color/light_gray"
        android:orientation="vertical">

        <xion.csonline.widget.CirclePortraitView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@color/blackfont"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_me_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackfont"
                android:text="123456789"
                android:textSize="18sp"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ll_me_portraitzone"
        android:id="@+id/ll_me_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--我的资料-->

        <LinearLayout
            android:id="@+id/ll_modify_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_person"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.6"
                android:text="@string/modify_profile"
                android:textColor="@color/blackfont"
                android:textSize="24dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_right"/>
        </LinearLayout>

        <!--清除缓存-->

        <LinearLayout
            android:id="@+id/ll_wipecache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_wipecache"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.6"
                android:text="@string/wipe_cache"
                android:textColor="@color/blackfont"
                android:textSize="24dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_right"/>
        </LinearLayout>
    </LinearLayout>



    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn"
        android:text="@string/exit"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

</RelativeLayout>
